style.css: fixed height issues for Course Titles on Mobile Screens course.html: fixed color contrast Removed extra file: courses.html

--- a/style.css
+++ b/style.css
@@ -170,8 +170,6 @@ footer span {
 
 .brand-outro {
   background-color: var(--bg-surface);
-  /* color: var(--text-primary); */
-  min-height: 50vh;
   display: flex;
   align-items: flex-end;
   overflow: hidden;
